--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
     "firebase": "^11.9.1",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
-    "next": "15.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.3.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-google-recaptcha": "^3.1.0",
     "resend": "^4.6.0"
